plugins/kotlin/idea/tests/testData/multiModuleLineMarker/expectEnumEntriesInOneLine/common/common.kt
package test

expect enum class <!LINE_MARKER("descr='Has actuals in jvm module'; targets=[(text=Enum; container=jvm; icon=nodes/Module.svg); (text=A; container=jvm; icon=nodes/Module.svg); (text=B; container=jvm; icon=nodes/Module.svg); (text=C; container=jvm; icon=nodes/Module.svg); (text=D; container=jvm; icon=nodes/Module.svg)]")!>Enum<!> { A, B, C, D }
